syntax = "proto3";
package groupproto;

// Write and Delete intentionally use uniquely named ResponseMessages
// incase they ever change down the road.
service GroupStore {
    rpc Write(WriteRequest) returns (WriteResponse) {}
    rpc StreamWrite(stream WriteRequest) returns (stream WriteResponse) {}
    rpc Lookup(LookupRequest) returns (LookupResponse) {}
    rpc StreamLookup(stream LookupRequest) returns (stream LookupResponse) {}
    rpc LookupGroup(LookupGroupRequest) returns (LookupGroupResponse) {}
    rpc StreamLookupGroup(stream LookupGroupRequest) returns (stream LookupGroupResponse) {}
    rpc ReadGroup(ReadGroupRequest) returns (ReadGroupResponse) {}
    rpc StreamReadGroup(stream ReadGroupRequest) returns (stream ReadGroupResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc StreamRead(stream ReadRequest) returns (stream ReadResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc StreamDelete(stream DeleteRequest) returns (stream DeleteResponse) {}
}

message EmptyMsg {}

message WriteRequest {
    uint64 keyA = 1;
    uint64 keyB = 2;
    uint64 nameKeyA = 3;
    uint64 nameKeyB = 4;
    bytes  value = 5;
    int64  tsm = 6;
}

message LookupRequest {
    uint64 keyA = 1;
    uint64 keyB = 2;
    uint64 nameKeyA = 3;
    uint64 nameKeyB = 4;
}

message ReadRequest {
    uint64 keyA = 1;
    uint64 keyB = 2;
    uint64 nameKeyA = 3;
    uint64 nameKeyB = 4;
}

message DeleteRequest {
    uint64 keyA = 1;
    uint64 keyB = 2;
    uint64 nameKeyA = 3;
    uint64 nameKeyB = 4;
    int64  tsm = 5;
}

message LookupGroupRequest {
    uint64 a = 1;
    uint64 b = 2;
}

message ReadGroupRequest {
    uint64 a = 1;
    uint64 b = 2;
}

message WriteResponse {
    int64  tsm = 1;
    string err = 2;
}

message LookupResponse {
    int64  tsm = 1;
    uint32 length = 2;
    string err = 3;
}

message LookupGroupResponse {
    repeated LookupGroupItem items = 1;
}

message LookupGroupItem {
    uint64 nameKeyA = 1;
    uint64 nameKeyB = 2;
    int64 timestampMicro = 3;
    uint32 length = 4;
}

message ReadGroupResponse {
    repeated ReadGroupItem items = 1;
}

message ReadGroupItem {
    uint64 nameKeyA = 1;
    uint64 nameKeyB = 2;
    int64 timestampMicro = 3;
    bytes value = 4;
}

message ReadResponse {
    int64  tsm = 1;
    bytes  value = 2;
    string err = 3;
}

message DeleteResponse {
    int64  tsm = 1;
    string err = 2;
}
